# cmcalc

./: COPYING  README.md  README_CN.md  build_apk.sh  build_gmp.sh  build_mpc.sh  build_mpfr.sh  pubspec.yaml
android/app/: build.gradle
assets/: help.txt
ios/: .gitignore
ios/Runner/: AppDelegate.swift  CalculatorBridge.g.h  CalculatorBridge.g.mm  CalculatorBridge.h  CalculatorBridge.mm  CalendarBridge.g.h  CalendarBridge.g.mm  CalendarBridge.h  CalendarBridge.mm  Info.plist  Runner-Bridging-Header.h  calculator_bridge.g.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/libqalc/: compile_libqalculate_ios.sh
lib/: main.dart  main.dart.bak
lib/calculator_bridge/: calculator_bridge.g.dart  calendar_bridge.g.dart
lib/model/: repl_message.dart  repl_message.freezed.dart
lib/page/: home.dart  kalk_repl_help_page.dart  kalk_repl_page.dart  router.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
pigeon/: calculator_bridge.dart  calendar_bridge.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: kalk_wrapper.rs  mod.rs  numbat_wrapper.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_cmcalc.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_cmcalc.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+21 files in other folders)
