[package]
name = "rust_lib_cmcalc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.1.0"
gmp-mpfr-sys = { version = "1.6", features = ["force-cross"] }
once_cell = "1.19.0"

[dependencies.kalk]
git = "https://github.com/BenderBlog/kalker/"
branch = "tanh_sinh"
#version = "3.2.0"
#default-features = false
